--- a/node-tree-implementation/index.html
+++ b/node-tree-implementation/index.html
@@ -16,13 +16,14 @@
                 <!-- Master node (ui-tree-nedes indicates that inside the elements there will be nodes)-->
                 <ol ui-tree-nodes ng-model="list" >
                     <!-- Nodes (ui-tree-node indicates to lib that this element is a node)-->
-                    <li ng-repeat="item in list" ui-tree-node ng-include="'items_renderer.html'">
+                    <li ng-repeat="item in list" ui-tree-node ng-include="'templates/items_renderer.html'">
                     </li>
                 </ol>
             </div>
 
         </div>
         <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+        <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
         <script type="text/javascript" src="tree-implementation.js"></script>    
     </body>
